@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 't3p_scalable is a powerful designed extension with the idea to get a TYPO3 to be able to adapt its architecture in scenarios of heavy load. So with this extension you will be able to use MySQL replication and Memcached in transparently or semi-transparently way. http://www.typo3performance.com',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '1.4.0',
+	'version' => '1.5.0',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
